# shieldpay

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  railway.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: error.tsx  (+7 more)
contracts/: Cargo.toml  README.md
contracts/anchor_registry/: Cargo.toml
contracts/anchor_registry/src/: lib.rs  test.rs
contracts/anchor_registry/test_snapshots/test/: anchor_and_query.1.json  anchor_with_range_requires_company_cosign.1.json  anchor_with_range_stores_cosigned_range.1.json  company_cannot_overwrite_an_existing_range.1.json  double_anchor_fails.1.json
contracts/deploy/: addresses.json  build.sh  deploy.sh
contracts/income_verifier/: Cargo.toml
contracts/income_verifier/src/: lib.rs  test.rs
contracts/income_verifier/src/testdata/: income_proof.hex  income_public.hex  income_vk.hex
contracts/income_verifier/test_snapshots/test/: real_proof_verifies_and_records_on_chain.1.json  same_nullifier_twice_is_rejected.1.json  wrong_nullifier_arg_is_rejected.1.json
contracts/payment_verifier/: Cargo.toml
contracts/payment_verifier/src/: lib.rs  test.rs
contracts/payment_verifier/src/testdata/: payroll_proof.hex  payroll_public.hex  payroll_vk.hex  proof.hex  public.hex  vk.hex
contracts/payment_verifier/test_snapshots/test/: duplicate_commitment_rejected.1.json  duplicate_payment_rejected.1.json  initialize_then_verify_and_record.1.json  (+13 more)
(+264 files in other folders)
