# Soroban contracts workspace.
# Build target: wasm32v1-none (Protocol 23+ canonical target).
# Toolchain: soroban-sdk 26 / stellar-cli 26.

[workspace]
resolver = "2"
members = ["anchor_registry", "payment_verifier"]

[workspace.dependencies]
soroban-sdk = "26"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
